# react-native-turbo-sqlite

./: .clangd  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  react-native-turbo-sqlite.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/workflows/: release.yml  validate.yml
cpp/: CMakeLists.txt  DatabaseHostObject.cpp  DatabaseHostObject.h  TurboSqliteModule.cpp  TurboSqliteModule.h
cpp/sqlcipher/: VERSION.txt
cpp/windows-jsi/: ReactNativeTurboSqliteJSI-generated.cpp  ReactNativeTurboSqliteJSI.h
example/: .detoxrc.js  app.json  index.html  index.metro.html  index.web.js  index.webpack.html  metro.config.js  metro.web.config.js  package.json  react-native.config.js  tsconfig.web.json  vite.config.ts  webpack.config.js
example-web/: index.html  package.json  tsconfig.json  vite.config.ts
example-web/src/: App.tsx
example/android/: DETOX_ANDROID_DISABLED.md  build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/turbolndexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/com/turbosqliteexample/: ExampleAppPathsModule.kt  ExampleAppPathsPackage.kt  MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/e2e/: encryption.test.js
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/TurboSqliteExample/: AppDelegate.mm  AppDelegate.swift  ExampleAppPaths.mm  Info.plist  LaunchScreen.storyboard
example/ios/TurboSqliteExample.xcodeproj/: project.pbxproj
example/ios/TurboSqliteExample.xcodeproj/xcshareddata/xcschemes/: TurboSqliteExample.xcscheme
example/ios/TurboSqliteExample.xcworkspace/: contents.xcworkspacedata
example/ios/TurboSqliteExampleTests/: TurboSqliteExampleTests.m
example/src/: App.tsx  NativeWindowsAppPaths.ts  main.web.tsx
example/src/turbomodules/: NativeExampleAppPaths.ts  NativeExampleAppPaths.web.ts
example/windows/: ReactNativeTurboSqliteExample.sln
example/windows/ReactNativeTurboSqliteExample/: AutolinkedNativeModules.g.cpp  AutolinkedNativeModules.g.targets  ExampleNativeModules.h  ReactNativeTurboSqliteExample.cpp  ReactNativeTurboSqliteExample.vcxproj  ReactNativeTurboSqliteExample.vcxproj.filters  packages.lock.json  resource.h
example/windows/ReactNativeTurboSqliteExample.Package/: Package.appxmanifest  ReactNativeTurboSqliteExample.Package.wapproj  packages.lock.json
example/windows/ReactNativeTurboSqliteExample/codegen/: NativeExampleAppPathsSpec.g.h
ios/: OnLoad.mm
lib/commonjs/: NativeTurboSqlite.js  NativeTurboSqlite.js.map
lib/module/: NativeTurboSqlite.js  NativeTurboSqlite.js.map
lib/typescript/commonjs/src/: NativeTurboSqlite.d.ts
lib/typescript/module/src/: NativeTurboSqlite.d.ts.map
scripts/: check-sqlcipher-config.js  generate-codegen-specs.cjs  vendor-sqlite-wasm.cjs
src/: NativeTurboSqlite.ts  NativeTurboSqlite.web.ts  TurboSqliteTypes.ts  WebTurboSqlite.ts  index.browser.ts  index.ts  index.web.ts  mocks.ts
src/sqlite-wasm-helpers/: createBlobSqliteWorker.ts  sqlite3Worker1Promiser.ts
tests/: index.test.ts
windows/: ReactNativeTurboSqlite.sln
windows/ReactNativeTurboSqlite/: ReactNativeTurboSqlite.vcxproj  ReactNativeTurboSqlite.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  packages.lock.json  resource.h
